examples/todomvc/api/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todomvc-api
  labels:
    istio-injection: enabled
