examples/todomvc/api/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todomvc-api
  labels:
    app: todomvc-api
spec:
  ports:
    - port: 3030
      name: http
  selector:
    app: todomvc-api
